--- a/Resources/fx-explosion2.plist
+++ b/Resources/fx-explosion2.plist
@@ -11,79 +11,79 @@
 	<key>blendFuncSource</key>
 	<integer>770</integer>
 	<key>duration</key>
-	<real>0.20000000298023224</real>
+	<real>0.2000000029802322</real>
 	<key>emitterType</key>
-	<real>0.0</real>
+	<integer>0</integer>
 	<key>finishColorAlpha</key>
-	<real>0.18000000715255737</real>
+	<real>0.1800000071525574</real>
 	<key>finishColorBlue</key>
-	<real>0.34000000357627869</real>
+	<real>0.3400000035762787</real>
 	<key>finishColorGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorRed</key>
 	<real>0.6600000262260437</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0.14000000059604645</real>
+	<real>0.1400000005960464</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0.74000000953674316</real>
+	<real>0.7400000095367432</real>
 	<key>finishColorVarianceRed</key>
-	<real>0.14000000059604645</real>
+	<real>0.1400000005960464</real>
 	<key>finishParticleSize</key>
-	<real>42.520000457763672</real>
+	<real>42.52000045776367</real>
 	<key>finishParticleSizeVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>gravityx</key>
-	<real>0.0</real>
+	<integer>-3000</integer>
 	<key>gravityy</key>
-	<real>0.0</real>
+	<integer>0</integer>
 	<key>maxParticles</key>
 	<real>460</real>
 	<key>maxRadius</key>
 	<real>100</real>
 	<key>maxRadiusVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>minRadius</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>particleLifespan</key>
-	<real>0.69529998302459717</real>
+	<real>0.6952999830245972</real>
 	<key>particleLifespanVariance</key>
-	<real>0.21050000190734863</real>
+	<real>0.2105000019073486</real>
 	<key>radialAccelVariance</key>
-	<real>276.32000732421875</real>
+	<real>276.3200073242188</real>
 	<key>radialAcceleration</key>
-	<real>-565.78997802734375</real>
+	<real>-565.7899780273438</real>
 	<key>rotatePerSecond</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>sourcePositionVariancex</key>
 	<real>80</real>
 	<key>sourcePositionVariancey</key>
 	<real>80</real>
 	<key>sourcePositionx</key>
-	<real>167.08000183105469</real>
+	<real>167.0800018310547</real>
 	<key>sourcePositiony</key>
 	<real>240</real>
 	<key>speed</key>
-	<real>348.67999267578125</real>
+	<real>348.6799926757812</real>
 	<key>speedVariance</key>
-	<real>32.889999389648438</real>
+	<real>32.88999938964844</real>
 	<key>startColorAlpha</key>
-	<real>0.72000002861022949</real>
+	<real>0.7200000286102295</real>
 	<key>startColorBlue</key>
 	<real>1</real>
 	<key>startColorGreen</key>
-	<real>0.34000000357627869</real>
+	<real>0.3400000035762787</real>
 	<key>startColorRed</key>
 	<real>1</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0.14000000059604645</real>
+	<real>0.1400000005960464</real>
 	<key>startColorVarianceGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceRed</key>
 	<real>0.2199999988079071</real>
 	<key>startParticleSize</key>
@@ -91,9 +91,9 @@
 	<key>startParticleSizeVariance</key>
 	<real>64</real>
 	<key>tangentialAccelVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>tangentialAcceleration</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>textureFileName</key>
 	<string>fx-explosion2.png</string>
 	<key>textureImageData</key>
